--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,15 @@ li {
 a {
   text-decoration: none !important;
 }
-.mt-120 {
-  margin-top: 120px;
-}
+
 header {
   padding: 30px 0;
 }
+
 header nav {
   height: 100%;
 }
+
 header nav ul {
   display: flex;
   gap: 20px;
@@ -28,31 +28,7 @@ header nav ul {
   width: 100%;
   height: 100%;
 }
-header nav ul li {
-  position: relative;
-}
-header nav ul li a {
-  color: #302f2f;
-  font-weight: 600;
-  padding: 8px 8px;
-  transition: all 0.3s linear;
-}
-header nav ul li a.active {
-  color: #2196f3;
-}
-header nav ul li a.active::after {
-  border-radius: 10px;
-  position: absolute;
-  content: "";
-  width: 50%;
-  height: 3px;
-  background: #2196f3;
-  bottom: -6px;
-  left: 9px;
-}
-header nav ul li a:hover {
-  color: #2196f3;
-}
+
 header .input {
   display: flex;
   gap: 30px;
@@ -67,67 +43,105 @@ header .input .login a {
   text-transform: uppercase;
 }
 header .input .register a {
-  background: #2196f3;
-  color: #fff;
+  background-color: #2196f3;
+  color: #ffffff;
   font-weight: 600;
   padding: 8px 16px;
   text-transform: uppercase;
   border-radius: 10px;
 }
 
-/* hero section */
-.hero {
+header nav ul li {
   position: relative;
-  padding: 50px 0;
+}
+
+header nav ul li a {
+  color: #302f2f;
+  font-weight: 600;
+  padding: 8px 8px;
+  transition: all 0.3s linear;
+}
+
+header nav ul li a.active {
+  color: #2196f3;
+}
+
+header nav ul li a:hover {
+  color: #2196f3;
+}
+
+header nav ul li a.active::after {
+  border-radius: 10px;
+  position: absolute;
+  content: '';
+  width: 50%;
+  height: 3px;
+  background-color: #2196f3;
+  bottom: -6px;
+  left: 9px;
+}
+
+/* Hero Section */
+
+.hero {
+  padding: 50px 0px;
+  position: relative;
 }
 .hero .left {
   display: flex;
   align-items: center;
   height: 100%;
-  order: 2;
 }
-.hero .right {
-  order: 1;
-}
+
 .hero .left h2 {
   font-size: 48px;
   font-weight: 600;
-  color: #000;
+  color: black;
 }
+
 .hero .left p {
   margin-top: 23px;
   font-size: 24px;
   font-weight: 600;
-  color: #000;
+  color: black;
 }
+
 .hero .left .my_btn {
   display: inline-block;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
 }
+
 .hero .left a {
   border: 2px solid #00bcd4;
   color: #00bcd4;
   padding: 8px 22px;
+
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: 500;
   display: flex;
   gap: 16px;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
-  font-size: 16px;
-  font-weight: 500;
+}
+
+.hero .shape {
+  position: absolute;
+  top: 0;
+  right: 0;
+
+  z-index: -1;
 }
 
 .hero .point h2 {
   font-size: 36px;
   font-weight: 600;
 }
-.hero .point p {
-  margin-top: 10px;
-  font-size: 18px;
-  font-weight: 600;
-}
-.shape {
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
+
+.row .col-md-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
